--- a/AlienUniverseDatabaseIII/Views/MainWindow.axaml
+++ b/AlienUniverseDatabaseIII/Views/MainWindow.axaml
@@ -5,8 +5,8 @@
         x:DataType="vm:MainWindowViewModel"
         Title="AlienUniverseDatabaseIII"
         Icon="/Assets/avalonia-logo.ico"
-        Width="1200" 
-        Height="600"
+        Width="1500" 
+        Height="650"
         >
     <ScrollViewer VerticalScrollBarVisibility="Auto">
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="20">
@@ -25,12 +25,11 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
 
-                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Wybierz z listy:" FontSize="30"/>
+                    <TextBlock Grid.Column="0" Grid.Row="0" Text="Wybierz z listy:" FontSize="30" Margin="0 0 0 20"/>
 
                     <ListBox Grid.Column="0" Grid.Row="1"
                              ItemsSource="{Binding Films}"
-                             SelectedItem="{Binding SelectedFilm}"
-                             >
+                             SelectedItem="{Binding SelectedFilm}">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding TytulOryginalny}"/>
@@ -38,12 +37,11 @@
                         </ListBox.ItemTemplate>
                     </ListBox>
                     
-                    <TextBlock Grid.Column="1" Grid.Row="0" Margin="10" Text="Dodaj nowy film:"/>
+                    <TextBlock Grid.Column="1" Grid.Row="0" Text="Dodaj nowy film:" FontSize="30" Margin="40 0"/>
                     
-                    <Button Grid.Column="2" Grid.Row="0" Content="Usuń wybrany"/>
+                    <Button Grid.Column="2" Grid.Row="0" Content="Usuń wybrany" Margin="0 0 20 0"/>
                 </Grid>
             </StackPanel>
-            
             
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="40 70 0 0">
                 <TextBlock Margin="0 25 0 0" Text="Opis:" FontSize="30"/>
@@ -102,16 +100,31 @@
                     <TextBlock Grid.Row="10" Grid.Column="1" Text="{Binding SelectedFilm.Ciekawostka}" TextWrapping="Wrap"/>
                 </Grid>
 
-                
-                <Button Content="Pokaż bohaterów" Margin="0 20 0 0"/>
+                <Button Content="Pokaż bohaterów" Margin="0 20 0 0" Command="{Binding ShowCharactersCommand}"/>
+
             </StackPanel>
-            
             
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Top" Margin="40 70 0 0">
                 <TextBlock Margin="0 25 0 20" Text="Bohaterowie:" FontSize="30"/>
 
-            </StackPanel>
+                <ComboBox ItemsSource="{Binding Races}" 
+                          SelectedItem="{Binding SelectedRace}" 
+                          Width="200" 
+                          Margin="0 0 0 10"
+                          />
 
+                <ListBox ItemsSource="{Binding FilteredCharacters}"
+                         SelectedItem="{Binding SelectedCharacter}"
+                         Width="250"
+                         Height="300">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Name}"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+                
+            </StackPanel>
         </StackPanel>
     </ScrollViewer>
 </Window>
