--- a/AlienUniverseDatabaseIII/Views/MainWindow.axaml
+++ b/AlienUniverseDatabaseIII/Views/MainWindow.axaml
@@ -38,6 +38,29 @@
                     </ListBox>
                     
                     <TextBlock Grid.Column="1" Grid.Row="0" Text="Dodaj nowy film:" FontSize="30" Margin="40 0"/>
+                    <Grid Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" ShowGridLines="False">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="0" Text="Tytuł filmu:" FontSize="15" Margin="10 5"/>
+                        <TextBox Grid.Column="1" Grid.Row="0" Width="150" Height="20" Text="{Binding NewFilmTitle}"/>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="1" Text="Rok premiery:" FontSize="15" Margin="10 5"/>
+                        <TextBox Grid.Column="1" Grid.Row="1" Width="150" Height="20" Text="{Binding NewFilmYear}"/>
+                        
+                        <TextBlock Grid.Column="0" Grid.Row="2" Text="Gatunek:" FontSize="15" Margin="10 5"/>
+                        <TextBox Grid.Column="1" Grid.Row="2" Width="150" Height="20" Text="{Binding NewFilmGenre}"/>
+                        
+                        <Button Grid.Column="0" Grid.Row="3" Content="Zapisz" Margin="5" Command="{Binding AddFilmCommand}"/>
+                    </Grid>
                     
                     <Button Grid.Column="2" Grid.Row="0" Content="Usuń wybrany" Margin="0 0 20 0"/>
                 </Grid>
